[package]
name = "libparted"
version = "0.1.3"
description = "Rust wrappers for libparted"
repository = "https://github.com/pop-os/libparted"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
license = "MIT"

[dependencies]
libc = "0.2"
libparted-sys = "0.1.1"

[dev-dependencies]
libc = "0.2"
failure = "0.1"
failure_derive = "0.1"
