[package]
name = "libparted"
version = "0.1.4"
description = "Rust wrappers for libparted"
repository = "https://github.com/pop-os/libparted"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
license = "MIT"

[dependencies]
libc = "0.2.68"
libparted-sys = "0.3.0"

[dev-dependencies]
libc = "0.2.68"
failure = "0.1.7"
failure_derive = "0.1.7"
