[package]
name = "libparted"
version = "0.1.4"
description = "Rust wrappers for libparted"
repository = "https://github.com/pop-os/libparted"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
license = "MIT"

[dependencies]
libc = "0.2.103"
# TODO: use a new release version
libparted-sys = { git = "https://github.com/cholcombe973/libparted-sys", rev = "99d7b6d"}

[dev-dependencies]
libc = "0.2.103"
failure = "0.1.8"
failure_derive = "0.1.8"
